# Terminal-Tool

./: AAPT2_FIX_GUIDE.md  AGENTS.md  GEMINI.md  README.md  eslint.config.mjs  fix-protocol-esm.js  obfuscated.txt  package-lock.json  package.json  pnpm-lock.yaml
.gemini/: settings.json
.github/workflows/: ci.yml  mobile-build.yml  publish-npm.yml  publish-pypi.yml  release-artifacts.yml  windows-build.yml
Python-Version/: README.md  pyproject.toml
Python-Version/src/terminal_tool_py/: api.py  cli.py  client.py  common.py  host.py  protocol.py
Python-Version/tests/: test_connection.py
apps/cli/: README.md  package.json  tsconfig.json
apps/cli/src/commands/: client.ts  host.ts  list.ts
apps/cli/test/: basic.test.ts
apps/relay-server/: package.json  tsconfig.json
apps/relay-server/src/: index.ts  token-service.ts
apps/web-ui/: index.html  package.json  tsconfig.json
apps/web-ui/src/: App.tsx  index.css
apps/windows-host/: package.json
apps/windows-host/core/: CMakeLists.txt  vcpkg.json
apps/windows-host/core/src/: host_engine.cpp  network_manager.cpp  network_manager.h  pty_manager.cpp  pty_manager.h  screen_capture.cpp  screen_capture.h
apps/windows-host/include/: host_engine.h
apps/windows-host/ui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TerminalToolHost.csproj  app.manifest
mobileapp/: app.json  gradlew  settings.gradle.kts
mobileapp/app/: build.gradle.kts
src/: Server.ts  cli.js  index.ts  server.js
tools/: host_control.py
website/: index.html  site.js  styles.css
(+6 files in other folders)
